# billyai

./: .gitignore  Dockerfile  atlas.hcl  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: main.yml
billyai/: main.py
billyai/cfg/: __init__.py
billyai/models/: __init__.py
migrations/: 20251123021210.sql  20251123030305.sql  20251123030425.sql  20251125022812.sql  20251125024811.sql  20251208010315.sql  20251210185006.sql  20251219195410.sql  20260108021316.sql  20260112022106.sql  atlas.sum
src/: REMOVE_main_.py  async.py  main.py  tasks.py
src/REMOVE_service/: __init__.py
src/REMOVE_service/category/: __init__.py
src/REMOVE_views/api/: __init__.py
src/api/: __init__.py  dependencies.py
src/application/services/: ai_agent_service.py  async_task_service.py  authentication_service.py  bill_service.py  category_service.py  registration_service.py  user_service.py
src/application/use_cases/: __init__.py  async_tasks.py
src/cfg/: middleware.py
src/core/models/: __init__.py  schema.py
src/domain/: entities.py  exceptions.py
src/domain/ports/: repositories.py  services.py
src/domain/repositories/: bill_repository.py  category_repository.py  tenant_repository.py  user_repository.py
src/infrastructure/: async_tasks.py  di.py
src/infrastructure/async_tasks/: __init__.py  ai.py  ai_tasks.py  message.py  message_tasks.py  realtime.py
src/infrastructure/config/: settings.py
src/libs/: auth.py  cache.py  pagination.py
src/presentation/: ai.py
src/service/: __init__.py  auth.py  category.py
src/tests/: conftest.py
(+70 files in other folders)
