[project]
name = "billyai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pydantic-ai>=1.22.0",
    "sqlalchemy>=2.0.44",
]

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["ALL"]

[tool.ruff.lint.isort]
force-single-line = true

[dependency-groups]
dev = [
    "atlas-provider-sqlalchemy>=0.4.1",
]
