[project]
name = "billyai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.8",
    "fastapi>=0.122.0",
    "psycopg[binary]>=3.3.2",
    "pydantic-ai>=1.22.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.44",
    "websockets>=15.0.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["ALL"]

[tool.ruff.lint.isort]
force-single-line = true

[dependency-groups]
dev = [
    "atlas-provider-sqlalchemy>=0.4.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "snoop>=0.6.0",
]
